Finishinge the style

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/files/style.css" />
-    <title>ascii art web</title>
+    <title>ascii art web stylize</title>
   </head>
   <body>
     <div class="container">
